--- a/lib/rumbl_web/templates/user/new.html.eex
+++ b/lib/rumbl_web/templates/user/new.html.eex
@@ -12,6 +12,11 @@
   </div>
   <div>
     <%= text_input f, :username, placeholder: "Username" %>
+    <%= error_tag f, :username %>
+  </div>
+  <div>
+    <%= password_input f, :password, placeholder: "Password" %>
+    <%= error_tag f, :password %>
   </div>
   <%= submit "Create User" %>
 <% end %>
